--- a/homepage.html
+++ b/homepage.html
@@ -22,6 +22,7 @@
                 <li><a href="features.html">Features</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="login-admin.html">Admin</a></li>
             </ul>
         </nav>
     </header>
