--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
             </form>
             
             <div class="register-link">
-                <p>Already have an account? <a href="login.html">Login Now</a></p>
+                <p>Already have an account? <a href="login-admin.html">Login Now</a></p>
             </div>
         </div>
     </main>
