LoginAdmin-Finished 12:07 am

--- a/admin/dashboard/admin.html
+++ b/admin/dashboard/admin.html
@@ -22,7 +22,7 @@
         </nav>
         <div class="admin-controls">
             <div class="admin-name">Admin User</div>
-            <a href="#" id="logout-btn">Logout</a>
+            <a href="../adminlogin/login-admin.html" id="logout-btn">Logout</a>
         </div>
     </header>
 
